--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "lodash": "^3.8.0",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5",
