--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "nodemon -e html,js ./bin/www",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "lodash": "^3.8.0",
+    "mandrill-api": "^1.0.45",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5",
