--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon -e html,js,css ./bin/www",
-    "postinstall": "bower cache clean && bower install"
+    "postinstall": "bower cache clean && ./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
