--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^3.8.0",
     "mandrill-api": "^1.0.45",
     "morgan": "~1.5.1",
+    "nodemon": "^1.3.7",
     "q": "^1.4.1",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5",
